# typell

./: .clinerules  .cursorrules  .editorconfig  .gitignore  .guix-channel  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  AI.a2ml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  EXPLAINME.adoc  GOVERNANCE.md  Justfile  MAINTAINERS.md  PLACEHOLDERS.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  UNIFIED-LEVELS.md  cliff.toml  eclexiaiser.toml  flake.nix  guix.scm  k9iser.toml  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml  wokelangiser.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  e2e.yml
.machine_readable/: ADJUST.contractile  AGENTIC.a2ml  CLADE.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  PLAYBOOK.a2ml  STATE.a2ml  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  NEUROSYM.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/trust/: Trustfile.a2ml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml  MAINTENANCE-CHECKLIST.a2ml
.reuse/: dep5
.well-known/: humans.txt  security.txt
.well-known/groove/: manifest.json
benches/: typell_bench.rs
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  deploy.k9.ncl  manifest.toml  vordr.toml
contractiles/dust/: Dustfile.a2ml
contractiles/k9/: typell-metadata.k9.ncl
contractiles/lust/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/typell-affinescript/: Cargo.toml
crates/typell-affinescript/src/: bridge.rs  lib.rs  rules.rs
crates/typell-betlang/: Cargo.toml
crates/typell-betlang/src/: bridge.rs  lib.rs  rules.rs
crates/typell-core/: Cargo.toml
crates/typell-core/benches/: typell_bench.rs
crates/typell-core/src/: check.rs  dimensional.rs  effects.rs  error.rs  infer.rs  lib.rs  linear.rs  proof.rs  qtt.rs  session.rs  types.rs  unify.rs
crates/typell-core/tests/: core_comprehensive_tests.rs  e2e_test.rs  property_test.rs
crates/typell-eclexia/: Cargo.toml
crates/typell-eclexia/src/: bridge.rs  lib.rs  resource.rs
crates/typell-ephapax/: Cargo.toml
crates/typell-ephapax/src/: bridge.rs  lib.rs  rules.rs
crates/typell-errorlang/: Cargo.toml
crates/typell-errorlang/src/: bridge.rs  lib.rs  rules.rs
crates/typell-jtv/: Cargo.toml
crates/typell-jtv/src/: bridge.rs  lib.rs  rules.rs
crates/typell-mylang/: Cargo.toml
crates/typell-mylang/src/: bridge.rs  lib.rs  rules.rs
crates/typell-oblibeny/: Cargo.toml
crates/typell-oblibeny/src/: bridge.rs  lib.rs  rules.rs
crates/typell-phronesis/: Cargo.toml
crates/typell-phronesis/src/: bridge.rs  lib.rs  rules.rs
crates/typell-server/: Cargo.toml
crates/typell-server/src/: handlers.rs  main.rs
crates/typell-tangle/: Cargo.toml
crates/typell-tangle/src/: bridge.rs  lib.rs  rules.rs
crates/typell-vcl/: Cargo.toml
crates/typell-vcl/src/: bridge.rs  levels.rs  lib.rs  rules.rs
crates/typell-vcl/tests/: vcl_bridge_tests.rs
crates/typell-vql/: Cargo.toml
crates/typell-vql/src/: bridge.rs  levels.rs  lib.rs  rules.rs
crates/typell-vql/tests/: vql_bridge_tests.rs
crates/typell-wokelang/: Cargo.toml
crates/typell-wokelang/src/: bridge.rs  lib.rs  rules.rs
docs/: AI-CONVENTIONS.md  AI-INSTALL-README-SECTION.adoc  AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc  QUICKSTART.md  THREAT-MODEL.md
docs/decisions/: 0002-reversibility-as-typing-case-study.md
docs/design/: DESIGN-2026-03-01-typell-vision.md
docs/maintenance/: MAINTENANCE-CHECKLIST.md
docs/reports/audit/: audit-2026-04-04.md
ffi/zig/: build.zig
ffi/zig/src/: main.zig
ffi/zig/test/: integration_test.zig
integrations/: README.md
spec/: README.md
spec/proof/: proof-system.adoc
spec/protocol/: TYPELL-PROTOCOL.adoc
spec/type-system/: dependent.adoc  effects.adoc  linear.adoc  modal.adoc  qtt.adoc  session.adoc
src/abi/: Foreign.idr  InferenceSoundness.idr  Layout.idr  LevelMonotonicity.idr  README.md  Soundness.idr  Types.idr
src/backends/: README.md
src/kernel/: README.md
tests/: integration_test.rs
